--- a/src/styles.css
+++ b/src/styles.css
@@ -14,10 +14,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0;
-  font-size: 18px;
+  height: 100%;
 
+  font-size: 18px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
